--- a/submissions/allykrupina/google-popup/index.html
+++ b/submissions/allykrupina/google-popup/index.html
@@ -22,7 +22,7 @@
                         <div class="wrapper">
                             <div class="apps-popup-block">
                                 <a class="popup-item" href="#">
-                                    <img class="app-image account-image" src="https://lh3.googleusercontent.com/-wR45nNlb0jY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOrtxfoKv7go3rZDlVl-xoTZ7AifA/s64-c-mo/photo.jpg" alt="app-icon">
+                                    <img class="app-image account-image" src="img/user-img.jpg" alt="app-icon">
                                     <p>Account</p>
                                 </a>
                                 <a class="popup-item" href="#">
@@ -75,9 +75,10 @@
                                 </a>
                             </div>
                             <input id='more-apps' class="more-apps" type="checkbox" name="more-apps" value="">
-                            <label for="more-apps" class="more-button">More
+                            <label for="more-apps" class="more-button"><a>More</a>
                                 <span class="apps-close"></span>
                             </label>
+                            <span class="more-button-line"></span>
                             <div class="apps-popup-block additional-items">
                                 <a class="popup-item" href="#">
                                     <img class="app-image" src="img/docs.svg" alt="app-icon">
