--- a/submissions/Zihfred/google pop-up/index.html
+++ b/submissions/Zihfred/google pop-up/index.html
@@ -16,98 +16,97 @@
         <div class="menu_item">
             <a href="#"><p>Images</p></a>
         </div>
-
-        <div class="menu_item pop-up-click">
-            <input type="checkbox" class="popup-checkbox" id="check">
-            <label for="check"><i class="fas fa-th"></i></a></label>
-            <div class="pop-up" id="popup">
-                <input type="checkbox" id="more-сlick">
-                <div class="pop-up-content">
+        <div class="menu_item">
+            <input type="checkbox" class="popup_checkbox" id="check">
+            <label for="check">
+                <i class="fas fa-th"></i>
+            </label>
+            <div class="pop_up" id="popup">
+                <div class="pop_up-content">
                     <input type="checkbox" id="more-checkbox">
-                    <div class="pop-up-item">
-                        <img src="img/google_docs.png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Docs</p>
+                    <div class="pop_up-item">
+                        <img src="img/google_docs.png" class="pop_up-item__img" alt="Docs">
+                        <p class="pop_up-item__text">Docs</p>
                     </div>
-
-                    <div class="pop-up-item">
-                        <img src="img/Google_Translate_Icon.png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Translate</p>
+                    <div class="pop_up-item">
+                        <img src="img/Google_Translate_Icon.png" class="pop_up-item__img" alt="Translate">
+                        <p class="pop_up-item__text">Translate</p>
                     </div>
-                    <div class="pop-up-item">
-                        <img src="img/1024px-Google+_icon.svg.png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Google+</p>
+                    <div class="pop_up-item">
+                        <img src="img/1024px-Google+_icon.svg.png" class="pop_up-item__img" alt="Google">
+                        <p class="pop_up-item__text">Google+</p>
                     </div>
-                    <div class="pop-up-item">
-                        <img src="img/google-png-5a3554027e9924.3682726615134443545186.jpg" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Search</p>
+                    <div class="pop_up-item">
+                        <img src="img/google-png-5a3554027e9924.3682726615134443545186.jpg" class="pop_up-item__img"
+                             alt="Search">
+                        <p class="pop_up-item__text">Search</p>
                     </div>
-                    <div class="pop-up-item">
-                        <img src="img/1280px-YouTube_full-color_icon_(2017).svg.png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Youtube</p>
+                    <div class="pop_up-item">
+                        <img src="img/1280px-YouTube_full-color_icon_(2017).svg.png" class="pop_up-item__img"
+                             alt="Youtube">
+                        <p class="pop_up-item__text">Youtube</p>
                     </div>
-                    <div class="pop-up-item">
-                        <img src="img/google_play.png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Play</p>
+                    <div class="pop_up-item">
+                        <img src="img/google_play.png" class="pop_up-item__img" alt="Play">
+                        <p class="pop_up-item__text">Play</p>
                     </div>
-                    <div class="pop-up-item">
-                        <img src="img/gmail.png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Gmail</p>
+                    <div class="pop_up-item">
+                        <img src="img/gmail.png" class="pop_up-item__img" alt="Gmail">
+                        <p class="pop_up-item__text">Gmail</p>
                     </div>
-                    <div class="pop-up-item">
-                        <img src="img/Без названия.png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Drive</p>
+                    <div class="pop_up-item">
+                        <img src="img/Drive.png" class="pop_up-item__img" alt="Drive">
+                        <p class="pop_up-item__text">Drive</p>
                     </div>
-                    <div class="pop-up-item">
-                        <img src="img/google_calendar.png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Calendar</p>
+                    <div class="pop_up-item">
+                        <img src="img/google_calendar.png" class="pop_up-item__img" alt="Calendar">
+                        <p class="pop_up-item__text">Calendar</p>
                     </div>
-                    <div class="pop-up-item">
-                        <img src="img/Google My Business-icon.png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">My <br>Business</p>
+                    <div class="pop_up-item">
+                        <img src="img/Google My Business-icon.png" class="pop_up-item__img" alt="Business">
+                        <p class="pop_up-item__text">My <br>Business</p>
                     </div>
-                    <div class="pop-up-item close">
-                        <img src="img/Без названия.jpg" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Blogger</p>
+                    <div class="pop_up-item close">
+                        <img src="img/Blogger.jpg" class="pop_up-item__img" alt="Blogger">
+                        <p class="pop_up-item__text">Blogger</p>
                     </div>
-                    <div class="pop-up-item close">
-                        <img src="img/1024px-Google_Photos_icon.svg.png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Photos</p>
+                    <div class="pop_up-item close">
+                        <img src="img/1024px-Google_Photos_icon.svg.png" class="pop_up-item__img" alt="Photos">
+                        <p class="pop_up-item__text">Photos</p>
                     </div>
-                    <div class="pop-up-item close">
-                        <img src="img/Без названия (1)1.jpg" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Map</p>
+                    <div class="pop_up-item close">
+                        <img src="img/Map.jpg" class="pop_up-item__img" alt="Map">
+                        <p class="pop_up-item__text">Map</p>
                     </div>
-                    <div class="pop-up-item close">
-                        <img src="img/Без названия (1).jpg" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Contacts</p>
+                    <div class="pop_up-item close">
+                        <img src="img/Contacts.jpg" class="pop_up-item__img" alt="Contacts">
+                        <p class="pop_up-item__text">Contacts</p>
                     </div>
-                    <div class="pop-up-item close">
-                        <img src="img/Hangouts_Icon.png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Hangouts</p>
+                    <div class="pop_up-item close">
+                        <img src="img/Hangouts_Icon.png" class="pop_up-item__img" alt="Hangouts">
+                        <p class="pop_up-item__text">Hangouts</p>
                     </div>
-                    <div class="pop-up-item close">
-                        <img src="img/Без названия (1).png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Keep</p>
+                    <div class="pop_up-item close">
+                        <img src="img/Keep.png" class="pop_up-item__img" alt="Keep">
+                        <p class="pop_up-item__text">Keep</p>
                     </div>
-                    <div class="pop-up-item close">
-                        <img src="img/unnamed.png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Jamboard</p>
+                    <div class="pop_up-item close">
+                        <img src="img/unnamed.png" class="pop_up-item__img" alt="Jamboard">
+                        <p class="pop_up-item__text">Jamboard</p>
                     </div>
-                    <div class="pop-up-item close">
-                        <img src="img/Без названия (2).png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Classrom</p>
+                    <div class="pop_up-item close">
+                        <img src="img/Classrom.png" class="pop_up-item__img" alt="Classrom">
+                        <p class="pop_up-item__text">Classrom</p>
                     </div>
-                    <div class="pop-up-item close">
-                        <img src="img/Google_Earth_Logo.svg.png" class="pop-up-item__img" alt="">
-                        <p class="pop-up-item__text">Earth</p>
+                    <div class="pop_up-item close">
+                        <img src="img/Google_Earth_Logo.svg.png" class="pop_up-item__img" alt="Earth">
+                        <p class="pop_up-item__text">Earth</p>
                     </div>
-                    <label class="pop-up-more" for="more-checkbox">More</label>
-                    <div class="fullsizepop-up">
+                    <label class="pop_up-more" for="more-checkbox">More</label>
+                    <div class="fullsizepop_up">
                         Even more from Google
                     </div>
                 </div>
-
-
             </div>
         </div>
         <div class="menu_item bell">
@@ -116,8 +115,6 @@
         <div class="menu_item username">
             <a href="#"><p>A</p></a>
         </div>
-
-
     </div>
 </div>
 </body>
