--- a/submissions/IrynaY/html-css-popup/index.html
+++ b/submissions/IrynaY/html-css-popup/index.html
@@ -14,7 +14,7 @@
         <li><a href="#">Gmail</a></li>
         <li><a href="#">Images</a></li>
         <li class="products">
-          <input type="checkbox" id="show-apps" class="hide">
+          <input type="checkbox" class="show-apps hide">
           <input type="reset" class="reset hide" value="">
 
           <div class="popup">
