--- a/submissions/Zihfred/google pop-up/index.html
+++ b/submissions/Zihfred/google pop-up/index.html
@@ -23,7 +23,7 @@
             </label>
             <div class="pop_up" id="popup">
                 <div class="pop_up-content">
-                    <input type="checkbox" id="more-checkbox">
+                    <input type="checkbox" id="more" class="more-checkbox">
                     <div class="pop_up-item">
                         <img src="img/google_docs.png" class="pop_up-item__img" alt="Docs">
                         <p class="pop_up-item__text">Docs</p>
@@ -102,7 +102,7 @@
                         <img src="img/Google_Earth_Logo.svg.png" class="pop_up-item__img" alt="Earth">
                         <p class="pop_up-item__text">Earth</p>
                     </div>
-                    <label class="pop_up-more" for="more-checkbox">More</label>
+                    <label class="pop_up-more" for="more">More</label>
                     <div class="fullsizepop_up">
                         Even more from Google
                     </div>
