--- a/submissions/IrynaY/html-css-popup/index.html
+++ b/submissions/IrynaY/html-css-popup/index.html
@@ -8,161 +8,196 @@
   <title></title>
 </head>
 <body>
-  <header>
-    <form>
-      <ul class="menu-right">
-        <li><a href="#">Gmail</a></li>
-        <li><a href="#">Images</a></li>
-        <li class="products">
-          <input type="checkbox" class="show-apps hide">
-          <input type="reset" class="reset hide" value="">
-
-          <div class="popup">
-            <ul class="app-list">
+  <form>
+    <div class="menu-right">
+      <a href="#" class="menu-item">Gmail</a>
+      <a href="#" class="menu-item">Images</a>
+      <input type="checkbox" class="products menu-item"">
+      <input type="reset" class="reset menu-item"" value="">
+      <div class="popup">
+        <ul class="app-list">
+          <li>
+            <a href="#">
+              <div>
+                <div class="app-list-img"></div>
+                <span class="title">Docs</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div>
+                <div class="app-list-img"></div>
+                <span class="title">Translate</span>
+              </div>              
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div>
+                <div class="app-list-img"></div>
+                <span class="title">Google+</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div>
+                <div class="app-list-img"></div>
+                <span class="title">Search</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div>
+                <div class="app-list-img"></div>
+                <span class="title">Youtube</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div>
+                <div class="app-list-img"></div>
+                <span class="title">Play</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div>
+                <div class="app-list-img"></div>
+                <span class="title">Gmail</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div>
+                <div class="app-list-img"></div>
+                <span class="title">Drive</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div>
+                <div class="app-list-img"></div>
+                <span class="title">Calendar</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div>
+                <div class="app-list-img"></div>
+                <span class="title">My Business</span>
+              </div>
+            </a>
+          </li>
+        </ul>
+        <div class="more">
+          <input type="checkbox" id="show-all" class="hide">
+          <label for="show-all">More</label>
+          <div class="view-more">
+            <hr class="popup-line"/>
+            <ul class="all-list">
               <li>
                 <a href="#">
-                  <div class="app-list-img"></div>
-                  <span class="title">Docs</span>
+                  <div>
+                    <div class="app-list-img"></div>
+                    <span class="title">Blogger</span>
+                  </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="app-list-img"></div>
-                  <span class="title">Translate</span>
+                  <div>
+                    <div class="app-list-img"></div>
+                    <span class="title">Photos</span>
+                  </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="app-list-img"></div>
-                  <span class="title">Google+</span>
+                  <div>
+                    <div class="app-list-img"></div>
+                    <span class="title">Maps</span>
+                  </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="app-list-img"></div>
-                  <span class="title">Search</span>
+                  <div>
+                    <div class="app-list-img"></div>
+                    <span class="title">Account</span>
+                  </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="app-list-img"></div>
-                  <span class="title">Youtube</span>
+                  <div>
+                    <div class="app-list-img"></div>
+                    <span class="title">Contacts</span>
+                  </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="app-list-img"></div>
-                  <span class="title">Play</span>
+                  <div>
+                    <div class="app-list-img"></div>
+                    <span class="title">Hangouts</span>
+                  </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="app-list-img"></div>
-                  <span class="title">Gmail</span>
+                  <div>
+                    <div class="app-list-img"></div>
+                    <span class="title">Keep</span>
+                  </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="app-list-img"></div>
-                  <span class="title">Drive</span>
+                  <div>
+                    <div class="app-list-img"></div>
+                    <span class="title">Jamboard</span>
+                  </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="app-list-img"></div>
-                  <span class="title">Calendar</span>
+                  <div>
+                    <div class="app-list-img"></div>
+                    <span class="title">Classroom</span>
+                  </div>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <div class="app-list-img"></div>
-                  <span class="title">My Business</span>
+                  <div>
+                    <div class="app-list-img"></div>
+                    <span class="title">Earth</span>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div>
+                    <div class="app-list-img"></div>
+                    <span class="title">Collection</span>
+                  </div>
                 </a>
               </li>
             </ul>
-
-            <div class="more">
-              <input type="checkbox" id="show-all" class="hide">
-              <label for="show-all"><a>More</a></label>
-              <div class="view-more">
-                <hr class="popup-line"/>
-                <ul class="all-list">
-                  <li>
-                    <a href="#">
-                      <div class="app-list-img"></div>
-                      <span class="title">Blogger</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <div class="app-list-img"></div>
-                      <span class="title">Photos</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <div class="app-list-img"></div>
-                      <span class="title">Maps</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <div class="app-list-img"></div>
-                      <span class="title">Account</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <div class="app-list-img"></div>
-                      <span class="title">Contacts</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <div class="app-list-img"></div>
-                      <span class="title">Hangouts</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <div class="app-list-img"></div>
-                      <span class="title">Keep</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <div class="app-list-img"></div>
-                      <span class="title">Jamboard</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <div class="app-list-img"></div>
-                      <span class="title">Classroom</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <div class="app-list-img"></div>
-                      <span class="title">Earth</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <div class="app-list-img"></div>
-                      <span class="title">Collection</span>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-
           </div>
-        </li>
-        <li class="notifications"></li>
-        <li class="account"></li>
-      </ul>
-    </form>
-  </header>
+        </div>
+      </div>
+      <a href="#" class="notifications menu-item""></a>
+      <a href="#" class="account menu-item""></a>
+    </div>
+  </form>
 </body>
 </html>
