add keyboard accessibility

--- a/submissions/Aldegid/google-style-popup/app/index.html
+++ b/submissions/Aldegid/google-style-popup/app/index.html
@@ -37,43 +37,43 @@
 			</label>
 			<div class="popup__inner">
 				<div class="popup__inner-container">
-				<div class="popup__inner-wrap">
+				<div class="popup__inner-wrap"  tabindex="0">
 					<div class="popup__inner-item g-plus"></div>
 					<span>Google+</span>
 				</div>
-				<div class="popup__inner-wrap">
+				<div class="popup__inner-wrap"  tabindex="0">
 					<div class="popup__inner-item search"></div>
 					<span>Search</span>
 				</div>
-				<div class="popup__inner-wrap">
+				<div class="popup__inner-wrap"  tabindex="0">
 					<div class="popup__inner-item youtube"></div>
 					<span>Youtube</span>
 				</div>
-				<div class="popup__inner-wrap">
+				<div class="popup__inner-wrap" tabindex="0">
 					<div class="popup__inner-item play"></div>
 					<span>Play</span>
 				</div>
-				<div class="popup__inner-wrap">
+				<div class="popup__inner-wrap" tabindex="0">
 					<div class="popup__inner-item news"></div>
 					<span>Новости</span>
 				</div>
-				<div class="popup__inner-wrap">
+				<div class="popup__inner-wrap" tabindex="0">
 					<div class="popup__inner-item mail"></div>
 					<span>Почта</span>
 				</div>
-				<div class="popup__inner-wrap">
+				<div class="popup__inner-wrap" tabindex="0">
 					<div class="popup__inner-item drive"></div>
 					<span>Диск</span>
 				</div>
-				<div class="popup__inner-wrap">
+				<div class="popup__inner-wrap" tabindex="0">
 					<div class="popup__inner-item calendar"></div>
 					<span>Календарь</span>
 				</div>
-				<div class="popup__inner-wrap">
+				<div class="popup__inner-wrap" tabindex="0">
 					<div class="popup__inner-item maps"></div>
 					<span>Карты</span>
 				</div>
-				<div class="popup__inner-wrap">
+				<div class="popup__inner-wrap" tabindex="0">
 					<div class="popup__inner-item adv"></div>
 					<span>Реклама</span>
 				</div>
@@ -85,39 +85,39 @@
 				</label>
 				<div class="popup__inner-more">
 						<div class="divider"></div>
-					<div class="popup__inner-wrap">
+					<div class="popup__inner-wrap" tabindex="0">
 						<span class="popup__inner-item translate"></span>
 						<span>Translate</span>
 					</div>
-					<div class="popup__inner-wrap">
+					<div class="popup__inner-wrap" tabindex="0">
 						<span class="popup__inner-item blogger"></span>
 						<span>Blogger</span>
 					</div>
-					<div class="popup__inner-wrap">
+					<div class="popup__inner-wrap" tabindex="0">
 						<span class="popup__inner-item photo"></span>
 						<span>Фото</span>
 					</div>
-					<div class="popup__inner-wrap">
+					<div class="popup__inner-wrap" tabindex="0">
 						<span class="popup__inner-item docs"></span>
 						<span>Docs</span>
 					</div>
-					<div class="popup__inner-wrap">
+					<div class="popup__inner-wrap" tabindex="0">
 						<span class="popup__inner-item contacts"></span>
 						<span>Контакты</span>
 					</div>
-					<div class="popup__inner-wrap">
+					<div class="popup__inner-wrap" tabindex="0">
 						<span class="popup__inner-item hangouts"></span>
 						<span>Hangouts</span>
 					</div>
-					<div class="popup__inner-wrap">
+					<div class="popup__inner-wrap" tabindex="0">
 						<span class="popup__inner-item jamboard"></span>
 						<span>Jamboard</span>
 					</div>
-					<div class="popup__inner-wrap">
+					<div class="popup__inner-wrap" tabindex="0">
 						<span class="popup__inner-item clasroom"></span>
 						<span>Класс</span>
 					</div>
-					<div class="popup__inner-wrap">
+					<div class="popup__inner-wrap" tabindex="0">
 						<span class="popup__inner-item earth"></span>
 						<span>Earth</span>
 					</div>
