Changes after mentor review

--- a/submissions/kalash14/html-css-popup/index.html
+++ b/submissions/kalash14/html-css-popup/index.html
@@ -168,7 +168,7 @@
 	</header>
 	<main class="main">
 		<div class="container">
-			<img src="./img/PopTartCat.gif" alt="" class="img-responsive">
+			<img src="./img/PopTartCat.gif" alt="kottans-banner" class="img-responsive">
 			<h2 class="main-title">This is Kottans!!!</h2>
 		</div>
 	</main>
