add focus and hover

--- a/submissions/RomanovAleksander/html-css-popup/index.html
+++ b/submissions/RomanovAleksander/html-css-popup/index.html
@@ -13,49 +13,49 @@
     <div class="services-menu">
         <a href="#">Gmail</a>
         <a href="#">Images</a>
+        <input type="checkbox" class="popup-input hidden-input" id="popup">
         <label for="popup">
             <div class="popup__icon-menu"></div>
         </label>
-        <input type="checkbox" class="popup-input hidden-input" id="popup">
         <div class="popup-wrapper">
             <div class="popup-wrapper__container">
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item docs"></div>
                     <div>Docs</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item translate"></div>
                     <div>Translate</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item g-plus"></div>
                     <div>Google+</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item search"></div>
                     <div>Search</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item youtube"></div>
                     <div>YouTube</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item play"></div>
                     <div>Play</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item gmail"></div>
                     <div>Gmail</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item drive"></div>
                     <div>Drive</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item calendar"></div>
                     <div>Calendar</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item business"></div>
                     <div>Business</div>
                 </div>
@@ -64,47 +64,47 @@
             <label for="popup-more" class="popup-more-btn">More</label>
             <div class="popup-wrapper__more">
                 <div class="line"></div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item blogger"></div>
                     <div>Blogger</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item photo"></div>
                     <div>Photo</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item maps"></div>
                     <div>Maps</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item news"></div>
                     <div>News</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item contacts"></div>
                     <div>Contacts</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item hangouts"></div>
                     <div>Hangouts</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item keep"></div>
                     <div>Keep</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item jamboard"></div>
                     <div>Jamboard</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item clasroom"></div>
                     <div>Classroom</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item earth"></div>
                     <div>Earth</div>
                 </div>
-                <div class="popup-wrapper__service">
+                <div class="popup-wrapper__service" tabindex="0">
                     <div class="popup-wrapper__item collections"></div>
                     <div>Collections</div>
                 </div>
