Changed focus on items

--- a/submissions/kalash14/html-css-popup/index.html
+++ b/submissions/kalash14/html-css-popup/index.html
@@ -113,7 +113,7 @@
                             class="navigation-panel-label"
                             
                         >
-                            <span class="navigation-panel-label-icon" type="button" role="button"></span>
+                            <span class="navigation-panel-label-icon"></span>
                         </label>
                         <div
                             class="navigation-services-list"
@@ -241,11 +241,11 @@
                                         type="checkbox"
                                         class="more-services-checkbox hidden-checkbox"
                                         id="more-services-checkbox"
-                                        tabindex="0"
                                     />
                                     <label
                                         for="more-services-checkbox"
                                         class="more-services-label"
+                                         tabindex="0"
                                         ><span role="button" type="button">Більше</span></label
                                     >
                                     <hr class="more-services-divider" />
