--- a/submissions/patrofimov/css-popup-menu/index.html
+++ b/submissions/patrofimov/css-popup-menu/index.html
@@ -11,42 +11,168 @@
       <li class="main-menu-item"><a class="ref-item" href="#">Gmail</a></li>
       <li class="main-menu-item"><a class="ref-item" href="#">Images</a></li>
       <li class="main-menu-item folder">
-        <a class="main-item ref-item" href="#" tabindex="1">Menu</a>
+        <input
+          id="menu-apps"
+          class="menu-apps"
+          type="checkbox"
+          name="menu-apps"
+          value=""
+        />
+
         <ul class="sub-menu">
-          <li class="sub-menu-item"><a class="ref-item" href="#">Icon1</a></li>
-          <li class="sub-menu-item"><a class="ref-item" href="#">Icon2</a></li>
-          <li class="sub-menu-item"><a class="ref-item" href="#">Icon3</a></li>
-          <li class="sub-menu-item"><a class="ref-item" href="#">Icon4</a></li>
-          <li class="sub-menu-item"><a class="ref-item" href="#">Icon5</a></li>
-          <li class="sub-menu-item"><a class="ref-item" href="#">Icon6</a></li>
-          <li class="sub-menu-item"><a class="ref-item" href="#">Icon7</a></li>
-          <li class="sub-menu-item"><a class="ref-item" href="#">Icon8</a></li>
-          <li class="sub-menu-item"><a class="ref-item" href="#">Icon9</a></li>
-          <li class="sub-menu-item"><a class="ref-item" href="#">Icon10</a></li>
-          <input
-            id="more-apps"
-            class="more-apps"
-            type="checkbox"
-            name="more-apps"
-            value=""
-          />
-          <label for="more-apps" class="sub-menu-item-ref"
-            >More
-            <span class="apps-close"></span>
-          </label>
-          <ul class="sub-menu-more">
-            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub01</a></li>
-            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub02</a></li>
-            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub03</a></li>
-            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub04</a></li>
-            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub05</a></li>
-            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub06</a></li>
-            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub07</a></li>
-            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub08</a></li>
-            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub09</a></li>
-            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub10</a></li>
-            <a class="other-products ref-item" href="#">Even more from Google</a>
-          </ul>
+          <li class="sub-menu-item">
+            <a class="ref-item" href="#">
+              <span class="sub-icon-item icon-item1"></span>
+              <span class="title-item">Icon1</span></a
+            >
+          </li>
+
+          <li class="sub-menu-item">
+            <a class="ref-item" href="#">
+              <span class="sub-icon-item icon-item2"></span>
+              <span class="title-item">Icon2</span></a
+            >
+          </li>
+
+          <li class="sub-menu-item">
+            <a class="ref-item" href="#">
+              <span class="sub-icon-item icon-item3"></span>
+              <span class="title-item">Icon3</span></a
+            >
+          </li>
+
+          <li class="sub-menu-item">
+            <a class="ref-item" href="#">
+              <span class="sub-icon-item icon-item4"></span>
+              <span class="title-item">Icon4</span></a
+            >
+          </li>
+
+          <li class="sub-menu-item">
+            <a class="ref-item" href="#">
+              <span class="sub-icon-item icon-item5"></span>
+              <span class="title-item">Icon5</span></a
+            >
+          </li>
+
+          <li class="sub-menu-item">
+            <a class="ref-item" href="#">
+              <span class="sub-icon-item icon-item6"></span>
+              <span class="title-item">Icon6</span></a
+            >
+          </li>
+
+          <li class="sub-menu-item">
+            <a class="ref-item" href="#">
+              <span class="sub-icon-item icon-item7"></span>
+              <span class="title-item">Icon7</span></a
+            >
+          </li>
+
+          <li class="sub-menu-item">
+            <a class="ref-item" href="#">
+              <span class="sub-icon-item icon-item8"></span>
+              <span class="title-item">Icon8</span></a
+            >
+          </li>
+
+          <li class="sub-menu-item">
+            <a class="ref-item" href="#">
+              <span class="sub-icon-item icon-item9"></span>
+              <span class="title-item">Icon9</span></a
+            >
+          </li>
+
+          <li class="sub-menu-item">
+            <a class="ref-item" href="#">
+              <span class="sub-icon-item icon-item10"></span>
+              <span class="title-item">Icon10</span></a
+            >
+          </li>
+
+          <span class="more-button">
+            <input
+              id="more-apps"
+              class="more-apps"
+              type="checkbox"
+              name="more-apps"
+              value=""
+            />
+
+            <ul class="sub-menu-more">
+              <li class="sub-menu-more-item">
+                <a class="ref-item" href="#">
+                  <span class="sub-icon-item icon-more-item1"></span>
+                  <span class="title-item">Sub01</span></a
+                >
+              </li>
+
+              <li class="sub-menu-more-item">
+                <a class="ref-item" href="#">
+                  <span class="sub-icon-item icon-more-item2"></span>
+                  <span class="title-item">Sub02</span></a
+                >
+              </li>
+
+              <li class="sub-menu-more-item">
+                <a class="ref-item" href="#">
+                  <span class="sub-icon-item icon-more-item3"></span>
+                  <span class="title-item">Sub03</span></a
+                >
+              </li>
+
+              <li class="sub-menu-more-item">
+                <a class="ref-item" href="#">
+                  <span class="sub-icon-item icon-more-item4"></span>
+                  <span class="title-item">Sub04</span></a
+                >
+              </li>
+
+              <li class="sub-menu-more-item">
+                <a class="ref-item" href="#">
+                  <span class="sub-icon-item icon-more-item5"></span>
+                  <span class="title-item">Sub05</span></a
+                >
+              </li>
+
+              <li class="sub-menu-more-item">
+                <a class="ref-item" href="#">
+                  <span class="sub-icon-item icon-more-item6"></span>
+                  <span class="title-item">Sub06</span></a
+                >
+              </li>
+
+              <li class="sub-menu-more-item">
+                <a class="ref-item" href="#">
+                  <span class="sub-icon-item icon-more-item7"></span>
+                  <span class="title-item">Sub07</span></a
+                >
+              </li>
+
+              <li class="sub-menu-more-item">
+                <a class="ref-item" href="#">
+                  <span class="sub-icon-item icon-more-item8"></span>
+                  <span class="title-item">Sub08</span></a
+                >
+              </li>
+
+              <li class="sub-menu-more-item">
+                <a class="ref-item" href="#">
+                  <span class="sub-icon-item icon-more-item9"></span>
+                  <span class="title-item">Sub09</span></a
+                >
+              </li>
+
+              <li class="sub-menu-more-item">
+                <a class="ref-item" href="#">
+                  <span class="sub-icon-item icon-more-item10"></span>
+                  <span class="title-item">Sub10</span></a
+                >
+              </li>
+
+              <a class="other-products ref-item" href="#">Even more</a>
+            </ul>
+          </span>
         </ul>
       </li>
       <li class="main-menu-item"><a class="ref-item" href="#">Home</a></li>
